--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,2 +1,8 @@
-<!DOCTYPE html>
-<h1>Aboutページ</h1>
+<div class="container px=5 px-sm-0">
+　  <div class= "row">
+　      <h1 class="px-3 mx-auto">
+　          Welcome to
+　          <strong>Bookers</strong>!
+　      </h1>
+　  </div>
+ </div>
