--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,19 @@
-<!DOCTYPE html>
-<h1>Topページ</h1>
+<div class="container px=5 px-sm-0">
+　  <div class= "row">
+　      <h1 class="px-3 mx-auto">
+　          Welcome to
+　          <strong>Bookers</strong>!
+　      </h1>
+　      <p>In<strong>Bookers</strong>,</p>
+　      <p>you can share and exchange  your opinions , inpressions , and emotions</p>
+　      <p> about various books!</p>
+　      <div class="btn-wrapper col-10 mx-auto">
+        <div class="row">
+          <a class="btn btn-info btn-sm btn-block mb-3 sign_in" href="/users/sign_in">Log in</a>
+        </div>
+        <div class="row">
+          <a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">Sign up</a>
+        </div>
+      </div>
+　  </div>
+ </div>
