--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,7 +18,7 @@
          </div>
 
          <div class="actions">
-           <%= f.submit 'Create Book' %><br>
+           <%= f.submit 'Create Book' ,%><br>
          </div>
         <% end %>
 　    </div>
