--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
          </div>
 
          <div class="actions">
-           <%= f.submit 'Create Book' %><br>
+           <%= f.submit 'Create Book' ,class:'btn btn-sm btn-success' %><br>
          </div>
         <% end %>
 　    </div>
