--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,23 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1>Editing Book</h1>
+
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+<%= form_with model: @book do |f| %>
+    <div>
+        <%= f.label :Title %><br>
+        <%= f.text_field :title, autofocus: true, :placeholder =>"#{@book.title}" %>
+    </div>
+    <div>
+        <%= f.label :Opinion %><br>
+        <%= f.text_area :body, :placeholder =>"#{@book.body}" %>
+    </div>
+    <div><%= f.submit "Update Book" ,class:'btn btn-sm btn-success' %></div>
+<% end %>
+<%=link_to "Show" ,books_path(@book.id) %>
+<%=link_to "Back" ,books_path %>
