--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,9 +2,8 @@
 <div class="container px=5 px-sm-0">
  <div class= "row">
   <div class="col-md-3">
+
    <h2>User info</h2>
-   <h3><%= @user.name %></h3>
-   <%= image_tag @user.get_profile_image(100,100) %>
 
    <div class="col-md-8 offset-md-1">
 　      <h2>Books</h2>
@@ -20,10 +19,33 @@
          </div>
 
          <div class="actions">
-           <%= f.submit 'Create Book' %><br>
+           <%= f.submit 'Create Book', class:'btn btn-sm btn-success' %><br>
          </div>
         <% end %>
     </div>
 　 </div>
+
+　 <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+      <table class="table table-hover table-inverse">
+       <thead>
+        <tr>
+         <th></th>
+         <th>Title</th>
+         <th>Opinion</th>
+         <th colspan="3"></th>
+        </tr>
+       </thead>
+       <tbody>
+        <% @books.each do |book| %>
+         <tr>
+          <td><%= %></td>
+          <td><%= link_to book.title,book_path(book.id) %></td>
+          <td><%= book.body %></td>
+         </tr>
+    <% end %>
+       </tbody>
+      </table>
+    </div>
  </div>
 </div>
