--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,22 +1,44 @@
-<h1>Editing Book</h1>
-<% if @book.errors.any? %>
-  <%= @book.errors.count %>errors prohibited this book from being saved:
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
+<div class="container px=5 px-sm-0">
+ <div class= "row">
+  <div class="col-md-3">
+
+   <h2>User info</h2>
+
+   <div class="col-md-8 offset-md-1">
+　      <h2>Books</h2>
+        <%= form_with model: @book do |f| %>
+         <div class="field">
+          <%= f.label :Title %><br>
+          <%= f.text_field :title %>
+         </div>
+
+         <div class="field">
+           <%= f.label :Opinion %><br>
+           <%= f.text_area :body %>
+         </div>
+
+         <div class="actions">
+           <%= f.submit 'Create Book' %><br>
+         </div>
+        <% end %>
+    </div>
+　 </div>
+
+　 <div class="col-md-8 offset-md-1">
+      <h2>Book detail</h2>
+      <table class="table table-hover table-inverse">
+       <tbody>
+         <% @books.each do |book| %>
+         <tr>
+          <td><%= %></td>
+          <td><%= link_to book.title,book_path(book.id) %></td>
+          <td><%= book.body %></td>
+          <td><%= link_to "Edit", edit_book_path(@book.id),class: "btn btn-sm btn-danger" %></td>
+          <td><%= link_to "Destroy", book_path(book.id), class: "btn btn-sm btn-danger",method: :delete, data: { confirm: "Are you sure?" } %></td>
+         </tr>
     <% end %>
-  </ul>
-<% end %>
-<%= form_with model: @book do |f| %>
-    <div>
-        <%= f.label :Title %><br/>
-        <%= f.text_field :title, autofocus: true, :placeholder =>"#{@book.title}" %>
-    </div>
-    <div>
-        <%= f.label :Body %><br/>
-        <%= f.text_area :body, :placeholder =>"#{@book.body}" %>
-    </div>
-    <div><%= f.submit "Update Book" %></div>
-<% end %>
-<%=link_to "Show" ,"/books/#{@book.id}" %>
-<%=link_to "Back" ,"/books" %>
+       </tbody>
+      </table>
+   </div>
+ </div>
+</div>
