--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,9 +4,28 @@
   <div class="col-md-3">
 
    <h2>User info</h2>
+     <%= image_tag current_user.get_profile_image(100,100)%>
+   <table>
+    <tbody>
+     <tr>
+      <th>name</th>
+    	 <th><%= @user.name %></th>
+     </tr>
+     <tr></tr>
+     <tr>
+      <th>Introdaction</th>
+      <th><%= @user.introduction %></th>
+     </tr>
+    </tbody>
+   </table>
+
+   <div class="row">
+     <%= link_to "設定", edit_user_path(@user.id), class:"btn btn-outline-secondary btn-block edit_user_id" %>
+   </div>
+
 
    <div class="col-md-8 offset-md-1">
-　      <h2>Books</h2>
+　      <h2>New Book</h2>
         <%= form_with model: @book do |f| %>
          <div class="field">
           <%= f.label :Title %><br>
@@ -39,11 +58,11 @@
        <tbody>
         <% @books.each do |book| %>
          <tr>
-          <td><%= %></td>
+          <td><%= image_tag book.user.get_profile_image(100,100) %></td>
           <td><%= link_to book.title,book_path(book.id) %></td>
           <td><%= book.body %></td>
          </tr>
-    <% end %>
+        <% end %>
        </tbody>
       </table>
     </div>
