--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,9 +3,29 @@
   <div class="col-md-3">
 
    <h2>User info</h2>
+   <%= image_tag current_user.get_profile_image("100","100")%>
+   <table>
+    <tbody>
+     <tr>
+      <th>name</th>
+    	 <th><%= @user.name %></th>
+     </tr>
+     <tr></tr>
+     <tr>
+      <th>Introdaction</th>
+      <th><%= @user.introduction %></th>
+     </tr>
+    </tbody>
+   </table>
+
+   <div class="row">
+     <%= link_to "設定", edit_user_path(@user.id), class:"btn btn-outline-secondary btn-block edit_user_id" %>
+   </div>
+
+
 
    <div class="col-md-8 offset-md-1">
-　      <h2>Books</h2>
+　      <h2>New Books</h2>
         <%= form_with model: @book do |f| %>
          <div class="field">
           <%= f.label :Title %><br>
