--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,17 +2,19 @@
 　  <div class= "row">
 　      <h1 class="px-3 mx-auto">
 　          Welcome to
-　          <strong>Bookers</strong>!
-　      </h1>
-　      <p>In<strong>Bookers</strong>,</p>
-　      <p>you can share and exchange  your opinions , inpressions , and emotions</p>
-　      <p> about various books!</p>
+　          <strong>Bookers</strong>!!
+　      </h1><br>
+
+　      <p>In<strong>Bookers</strong>,</p><br>
+
+　      <p>you can share and exchange  your opinions , inpressions , and emotions</p><br>
+　      <p> about various books!</p><br>
 　      <div class="btn-wrapper col-10 mx-auto">
         <div class="row">
-          <a class="btn btn-info btn-sm btn-block mb-3 sign_in" href="/users/sign_in">Log in</a>
+          <%= link_to "Log in", user_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>
         </div>
         <div class="row">
-          <a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">Sign up</a>
+          <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-sm btn-block sign_up" %>
         </div>
       </div>
 　  </div>
