--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,10 +5,14 @@
      <form enctype="multipart/form-data" action="/users/34053" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off"><input type="hidden" name="authenticity_token" value="1EnVaBZ4K13RHrOskqPrhMxIh_4FPpm2kDKIfg3VA3U6XAbfEdoS_9ZJKkL7hnsM8oJWiMB9Ij66iUUjBssnbw" autocomplete="off">
 
      <%= form_with model: @user do |f| %>
-     <label for="inputName">Name</label><br>
-      <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"Name"%><br>
-     <label for="inputImage">Image</label><br>
-      <%= f.file_field :profile_image, placeholder: "Image", accept: "image/*" %><br>
+     <div class="field">
+       <%= f.label :name, "Name", class: "label" %><br>
+       <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"Name" %><br>
+     </div>
+     <div class="field">
+       <%= f.label :profile_image, "Image", class: "label" %><br>
+       <%= f.file_field :profile_image, placeholder: "Image", accept: "image/*" %><br>
+     </div>
      <label>Introduction</label><br>
       <%= f.text_area :caption %><br>
       <%= f.submit "Update User" , class:'btn btn-sm btn-success' %>
