--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,28 @@
 <div class="container px=5 px-sm-0">
-　  <div class= "row">
-　    <div class="col-md-3">
+ <div class= "row">
+  <div class="col-md-3">
 　      <h2>User info</h2>
-　    </div>
-　    
+　      <%= image_tag current_user.get_profile_image(100,100)%>
+        <table>
+         <tbody>
+          <tr></tr>
+          <tr>
+           <th>name</th>
+         	 <th><%= @user.name %></th>
+          </tr>
+          <tr>
+           <th>Introdaction</th>
+           <th><%= @user.introduction %></th>
+          </tr>
+         </tbody>
+        </table>
+
+       <div class="row">
+         <%= link_to "設定", edit_user_path(@user.id), class:"btn btn-outline-secondary btn-block edit_user_id" %>
+       </div>
+
 　    <div class="col-md-8 offset-md-1">
-　      <h2>Books</h2>
+　      <h2 class ="mt-3">New Book</h2>
         <%= form_with model: @book do |f| %>
          <div class="field">
           <%= f.label :Title %><br>
@@ -18,9 +35,27 @@
          </div>
 
          <div class="actions">
-           <%= f.submit 'Create Book' ,%><br>
+           <%= f.submit 'Create Book', class:'btn btn-sm btn-success' %><br>
          </div>
         <% end %>
 　    </div>
 　  </div>
+
+　  <div class="col-md-8 offset-md-1">
+      <h2>Users</h2>
+      <table class="table table-hover table-inverse">
+       <thead>
+        <tr>
+         <th>image</th>
+         <th>name</th>
+         <th></th>
+         <th colspan="3"></th>
+        </tr>
+       </thead>
+       <tbody>
+        
+       </tbody>
+      </table>
+    </div>
 　</div>
+</div>
