--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,40 @@
-<!DOCTYPE html>
 <h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
-
+<div class="container px=5 px-sm-0">
+ <div class= "row">
+  <div class="col-md-3">
 <!-- ユーザーの詳細 -->
-<div>
-  <h3>User info</h3>
-  
-</div>
+   <div>
+     <h3>User info</h3>
+     <%= image_tag current_user.get_profile_image(100,100)%>
+     　<table>
+          <tbody>
+            <tr>
+              <th>name</th>
+            	 <th><%= @user.name %></th>
+            </tr>
+            <tr></tr>
+            <tr>
+              <th>Introdaction</th>
+              <th><%= @user.introduction %></th>
+            </tr>
+          </tbody>
+       </table>
 
-<div class="col-md-8 offset-md-1">
-　      <h2>Books</h2>
+          <div class="row">
+            <%= link_to "設定", edit_user_path(@user.id), class:"btn btn-outline-secondary btn-block edit_user_id" %>
+          </div>
+
+   </div>
+
+   <div class="col-md-8 offset-md-1">
+       <h2 class ="mt-3">New Book</h2>
         <%= form_with model: @book do |f| %>
-         <div class="field">
+         <div class="form-group">
           <%= f.label :Title %><br>
           <%= f.text_field :title %>
          </div>
 
-         <div class="field">
+         <div class="form-group">
            <%= f.label :Opinion %><br>
            <%= f.text_area :body %>
          </div>
@@ -25,5 +43,7 @@
            <%= f.submit 'Create Book' ,class:'btn btn-sm btn-success' %><br>
          </div>
         <% end %>
-　    </div>
-
+　 </div>
+  </div>
+ </div>
+</div>
