--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,8 +1,7 @@
 <div class="container px=5 px-sm-0">
-　  <div class= "row">
-　      <h1 class="px-3 mx-auto">
-　          Welcome to
-　          <strong>Bookers</strong>!
-　      </h1>
-　  </div>
+  <div class= "row">
+      <h1 class="px-3 mx-auto">
+          Welcome to<i class="fa-solid fa-book"></i><strong>Bookers</strong>!
+      </h1>
+  </div>
  </div>
