--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,15 +1,18 @@
 <div class="container px=5 px-sm-0">
-　  <div class= "row">
-　      <h1 class="px-3 mx-auto">
-　          Welcome to
-　          <strong>Bookers</strong>!!
-　      </h1><br>
+ <div class= "row">
+  <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
 
-　      <p>In<strong>Bookers</strong>,</p><br>
+    <h1>
+        Welcome to<i class="fa-solid fa-book"></i><strong>Bookers</strong>!!
+    </h1>
 
-　      <p>you can share and exchange  your opinions , inpressions , and emotions</p><br>
-　      <p> about various books!</p><br>
-　      <div class="btn-wrapper col-10 mx-auto">
+      <p>
+        In<i class="fa-solid fa-book"></i><strong>Bookers</strong>,
+      </p>
+
+     <p>you can share and exchange  your opinions , inpressions , and emotions</p>
+     <p>about various books!</p>
+      <div class="btn-wrapper col-10 mx-auto">
         <div class="row">
           <%= link_to "Log in", user_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>
         </div>
@@ -17,5 +20,6 @@
           <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-sm btn-block sign_up" %>
         </div>
       </div>
-　  </div>
+  </div>
  </div>
+</div>
