--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
   <div class="col-md-3">
 　      <h2>User info</h2>
 　      <%= image_tag current_user.get_profile_image(100,100)%>
-        <table>
+        <table class= "table">
          <tbody>
           <tr></tr>
           <tr>
@@ -18,30 +18,39 @@
         </table>
 
        <div class="row">
-         <%= link_to "設定", edit_user_path(@user.id), class:"btn btn-outline-secondary btn-block edit_user_id" %>
+         <%= link_to edit_user_path(@user.id), class:"btn btn-outline-secondary btn-block edit_user_id" do %>
+         <i class="fa-solid fa-user-gear"></i>
+         <% end %>
        </div>
 
-　    <div class="col-md-8 offset-md-1">
-　      <h2 class ="mt-3">New Book</h2>
+    <h2 class= "mt-3">New Book</h2>
+       <% if @book.errors.any? %>
+       <%= @book.errors.count %>errors prohibited this book from being saved:
+      <ul>
+       <% @book.errors.full_messages.each do |message| %>
+       <li><%= message %></li>
+       <% end %>
+      </ul>
+      <% end %>
+
         <%= form_with model: @book do |f| %>
-         <div class="field">
+         <div class="form-group">
           <%= f.label :Title %><br>
           <%= f.text_field :title %>
          </div>
 
-         <div class="field">
+         <div class="form-group">
            <%= f.label :Opinion %><br>
            <%= f.text_area :body %>
          </div>
 
-         <div class="actions">
+         <div class="form-group">
            <%= f.submit 'Create Book', class:'btn btn-sm btn-success' %><br>
          </div>
         <% end %>
-　    </div>
-　  </div>
+  </div>
 
-　  <div class="col-md-8 offset-md-1">
+  <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
       <table class="table table-hover table-inverse">
        <thead>
@@ -53,7 +62,15 @@
         </tr>
        </thead>
        <tbody>
-        
+       <% @users.each do |user| %>
+         <tr>
+          <td>
+              <%= image_tag user.get_profile_image(100,100) %>
+          </td>
+          <td><%= user.name %></td>
+          <td><%= link_to "Show",user_path(user.id) %></td>
+         </tr>
+       <% end %>
        </tbody>
       </table>
     </div>
