--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,11 @@
-<h1>Users#show</h1>
 <div class="container px=5 px-sm-0">
  <div class= "row">
   <div class="col-md-3">
 <!-- ユーザーの詳細 -->
    <div>
      <h3>User info</h3>
-     <%= image_tag current_user.get_profile_image(100,100)%>
-     　<table>
+     <%= image_tag @user.get_profile_image(100,100)%>
+     　<table class="table">
           <tbody>
             <tr>
               <th>name</th>
@@ -14,20 +13,29 @@
             </tr>
             <tr></tr>
             <tr>
-              <th>Introdaction</th>
+              <th>Introduction</th>
               <th><%= @user.introduction %></th>
             </tr>
           </tbody>
        </table>
 
           <div class="row">
-            <%= link_to "設定", edit_user_path(@user.id), class:"btn btn-outline-secondary btn-block edit_user_id" %>
+            <%= link_to edit_user_path(@user.id), class:"btn btn-outline-secondary btn-block edit_user_id" do %>
+            <i class="fa-solid fa-user-gear"></i>
+            <% end %>
           </div>
-
    </div>
 
-   <div class="col-md-8 offset-md-1">
        <h2 class ="mt-3">New Book</h2>
+       <% if @book.errors.any? %>
+        <%= @book.errors.count %>errors prohibited this book from being saved:
+       <ul>
+        <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+       </ul>
+       <% end %>
+
         <%= form_with model: @book do |f| %>
          <div class="form-group">
           <%= f.label :Title %><br>
@@ -39,11 +47,33 @@
            <%= f.text_area :body %>
          </div>
 
-         <div class="actions">
+         <div class="form-group">
            <%= f.submit 'Create Book' ,class:'btn btn-sm btn-success' %><br>
          </div>
         <% end %>
-　 </div>
   </div>
+
+  <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+      <table class="table table-hover table-inverse">
+       <thead>
+        <tr>
+         <th></th>
+         <th>Title</th>
+         <th>Opinion</th>
+         <th colspan="3"></th>
+        </tr>
+       </thead>
+       <tbody>
+        <% @books.each do |book| %>
+         <tr>
+          <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+          <td><%= link_to book.title,book_path(book.id) %></td>
+          <td><%= book.body %></td>
+         </tr>
+        <% end %>
+       </tbody>
+      </table>
+    </div>
  </div>
 </div>
