--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,23 +1,32 @@
-<h1>Editing Book</h1>
+<div class= "container">
+  <div class= "row">
+    <div class= "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
 
-<% if @book.errors.any? %>
-  <%= @book.errors.count %>errors prohibited this book from being saved:
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-<%= form_with model: @book do |f| %>
-    <div>
-        <%= f.label :Title %><br>
-        <%= f.text_field :title, autofocus: true, :placeholder =>"#{@book.title}" %>
+      <h1>Editing Book</h1>
+
+      <% if @book.errors.any? %>
+      <%= @book.errors.count %>errors prohibited this book from being saved:
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
+      <%= form_with model: @book do |f| %>
+          <div>
+              <%= f.label :Title %><br>
+              <%= f.text_field :title, autofocus: true, :placeholder =>"#{@book.title}" %>
+          </div>
+          <div>
+              <%= f.label :Opinion %><br>
+              <%= f.text_area :body, :placeholder =>"#{@book.body}" %>
+          </div>
+          <div>
+              <%= f.submit "Update Book" ,class:'btn btn-sm btn-success' %>
+          </div>
+      <% end %>
+      <%=link_to "Show" ,book_path(@book.id) %>
+      <%=link_to "Back" ,books_path %>
     </div>
-    <div>
-        <%= f.label :Opinion %><br>
-        <%= f.text_area :body, :placeholder =>"#{@book.body}" %>
-    </div>
-    <div><%= f.submit "Update Book" ,class:'btn btn-sm btn-success' %></div>
-<% end %>
-<%=link_to "Show" ,books_path(@book.id) %>
-<%=link_to "Back" ,books_path %>
+  </div>
+</div>
