--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,6 @@
  <div class= "row">
   <div class="col-md-3">
 
-   <div>
     <h2>User info</h2>
       <%= image_tag current_user.get_profile_image(100,100)%>
     <table class="table">
@@ -21,12 +20,12 @@
 
     <div class="row">
       <%= link_to edit_user_path(@user.id), class:"btn btn-outline-secondary btn-block edit_user_id" do %>
-      <i class="fa-solid fa-user-gear"></i>
+      <i class="fas fa-user-cog"></i>
       <% end %>
     </div>
-   </div>
 
-      <h2 class= "mt-3">New Book</h2>
+      <h2 class= "mt-3">New book</h2>
+
       <% if @book.errors.any? %>
        <%= @book.errors.count %>errors prohibited this book from being saved:
       <ul>
@@ -35,7 +34,7 @@
        <% end %>
       </ul>
       <% end %>
-      
+
         <%= form_with model: @book do |f| %>
          <div class="form-group">
           <%= f.label :Title %><br>
@@ -67,7 +66,11 @@
        <tbody>
         <% @books.each do |book| %>
          <tr>
-          <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+          <td>
+           <%= link_to user_path(book.user) do %>
+           <%= image_tag book.user.get_profile_image(100,100) %>
+           <% end %>
+          </td>
           <td><%= link_to book.title,book_path(book.id) %></td>
           <td><%= book.body %></td>
          </tr>
