--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,7 +2,6 @@
  <div class= "row">
   <div class="col-md-3">
 
-   <div>
     <h2>User info</h2>
     <%= image_tag @user.get_profile_image(100,100) %>
     <table class="table">
@@ -21,11 +20,12 @@
 
     <div class="row">
       <%= link_to edit_user_path(@user.id), class:"btn btn-outline-secondary btn-block edit_user_id" do %>
-      <i class="fa-solid fa-user-gear"></i>
+      <i class="fas fa-user-cog"></i>
       <% end %>
     </div>
-   </div>
-        <h2 class= "mt-3">New Book</h2>
+
+        <h2 class= "mt-3">New book</h2>
+
         <% if @newbook.errors.any? %>
          <%= @newbook.errors.count %>errors prohibited this book from being saved:
         <ul>
