--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,7 +1,7 @@
 <div class="container px=5 px-sm-0">
   <div class= "row">
       <h1 class="px-3 mx-auto">
-          Welcome to<i class="fa-solid fa-book"></i><strong>Bookers</strong>!
+          Welcome to<i class="fas fa-book"></i><strong>Bookers</strong>!
       </h1>
   </div>
  </div>
