--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
     <title>Bookers2</title>
-    <%= csrf_meta_tags %>
+    <meta charset="utf-8">
+
+    <%= csrf_meta_tag %>
     <%= csp_meta_tag %>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://kit.fontawesome.com/39d93930e2.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
@@ -22,49 +28,51 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
+
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
 
         <% if user_signed_in? %>
         <li class="nav-item">
           <%= link_to user_path(current_user.id), class: 'nav-link text-white' do %>
-          <i class="fa-solid fa-house-chimney"></i> Home
+          <i class="fas fa-home"></i> Home
           <% end %>
         </li>
         <li class="nav-item">
           <%= link_to users_path, class: 'nav-link text-white' do %>
-          <i class="fa-solid fa-users"></i> Users
+          <i class="fas fa-users"></i> Users
           <% end %>
         </li>
         <li class="nav-item">
           <%= link_to books_path, class: 'nav-link text-white' do %>
-          <i class="fa-solid fa-book-open"></i> Books
+          <i class="fas fa-book-open"></i> Books
           <% end %>
         </li>
         <li class="nav-item">
           <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-white' do %>
-          <i class="fa-solid fa-right-from-bracket"></i> Log out
+          <i class="fas fa-sign-out-alt"></i> Log out
           <% end %>
         </li>
+
         <% else %>
         <li class="nav-item">
           <%= link_to root_path, class: 'nav-link text-white' do %>
-          <i class="fa-solid fa-house-chimney"></i> Home
+          <i class="fas fa-home"></i> Home
           <% end %>
         </li>
         <li class="nav-item">
           <%= link_to about_path, class: 'nav-link text-white' do %>
-          <i class="fa-solid fa-link"></i> About
+          <i class="fas fa-link"></i> About
           <% end %>
         </li>
         <li class="nav-item">
           <%= link_to new_user_registration_path, class: 'nav-link text-white' do %>
-          <i class="fa-solid fa-user-plus"></i> Sign up
+          <i class="fas fa-user-plus"></i> Sign up
           <% end %>
         </li>
         <li class="nav-item">
           <%= link_to  new_user_session_path, class: 'nav-link text-white' do %>
-          <i class="fa-solid fa-right-to-bracket"></i> Log in
+          <i class="fas fa-sign-in-alt"></i> Log in
           <% end %>
         </li>
         <% end %>
@@ -73,6 +81,8 @@
       </nav>
     </header>
     <main class="mb-auto">
+
+
       <% if flash[:notice] %>
       <div class="notification is-info">
         <p class="notice"><%= notice %></p>
@@ -96,5 +106,8 @@
         </div>
       </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </body>
 </html>
