--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,9 @@
 <div class="container px=5 px-sm-0">
  <div class= "row">
   <div class="col-md-3">
+
+
+
 　      <h2>User info</h2>
 　      <%= image_tag current_user.get_profile_image(100,100)%>
         <table class= "table">
@@ -19,12 +22,13 @@
 
        <div class="row">
          <%= link_to edit_user_path(@user.id), class:"btn btn-outline-secondary btn-block edit_user_id" do %>
-         <i class="fa-solid fa-user-gear"></i>
+         <i class="fas fa-user-cog"></i>
          <% end %>
        </div>
 
-    <h2 class= "mt-3">New Book</h2>
-       <% if @book.errors.any? %>
+    <h2 class= "mt-3">New book</h2>
+
+      <% if @book.errors.any? %>
        <%= @book.errors.count %>errors prohibited this book from being saved:
       <ul>
        <% @book.errors.full_messages.each do |message| %>
@@ -68,7 +72,7 @@
               <%= image_tag user.get_profile_image(100,100) %>
           </td>
           <td><%= user.name %></td>
-          <td><%= link_to "Show",user_path(user.id) %></td>
+          <td><%= link_to "Show",user_path(user.id)%></td>
          </tr>
        <% end %>
        </tbody>
