--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,10 @@
 <div class="container px=5 px-sm-0">
  <div class= "row">
   <div class="col-md-3">
+
+
 <!-- ユーザーの詳細 -->
-   <div>
+
      <h3>User info</h3>
      <%= image_tag @user.get_profile_image(100,100)%>
      　<table class="table">
@@ -21,20 +23,20 @@
 
           <div class="row">
             <%= link_to edit_user_path(@user.id), class:"btn btn-outline-secondary btn-block edit_user_id" do %>
-            <i class="fa-solid fa-user-gear"></i>
+            <i class="fas fa-user-cog"></i>
             <% end %>
           </div>
-   </div>
 
-       <h2 class ="mt-3">New Book</h2>
+       <h2 class ="mt-3">New book</h2>
+
        <% if @book.errors.any? %>
-        <%= @book.errors.count %>errors prohibited this book from being saved:
-       <ul>
-        <% @book.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-        <% end %>
-       </ul>
+       <%= @book.errors.count %>errors prohibited this book from being saved:
+      <ul>
+       <% @book.errors.full_messages.each do |message| %>
+       <li><%= message %></li>
        <% end %>
+      </ul>
+      <% end %>
 
         <%= form_with model: @book do |f| %>
          <div class="form-group">
@@ -67,7 +69,11 @@
        <tbody>
         <% @books.each do |book| %>
          <tr>
-          <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+          <td>
+           <%= link_to user_path(book.user) do %>
+           <%= image_tag book.user.get_profile_image(100,100) %>
+           <% end %>
+          </td>
           <td><%= link_to book.title,book_path(book.id) %></td>
           <td><%= book.body %></td>
          </tr>
